# optionresult

./: .gitignore  README.md  pyproject.toml
src/optionresult/: __init__.py  exceptions.py  option.py  result.py
tests/: test_option.py  test_result.py  test_type.py
