[project]
name = "optionresult"
version = "0.1.1"
description = "Rust style option and result types for Python"
authors = [
    { name = "sunfkny", email = "sunfkny@google.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "coverage>=7.4.4",
]
[tool.rye.scripts]
"coverage:test" = "coverage run -m pytest"
"coverage:report" = "coverage report -m"
test = { chain = ["coverage:test", "coverage:report" ] }

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/optionresult"]
